Refactored the shop class for readability